<resources>
    <string name="app_name">Tia Alarm</string>
    <string name="repeat_interval_hours">repeat interval (Hours)</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="delete">Delete</string>
    <string name="alarm_name">alarm name</string>
    <string name="time">"Time : "</string>
    <string name="repeating_every_hours">Repeating every %1$s hours</string>
    <string name="alarm">Alarm: %1$s</string>
    <string name="time_s_up">Time\'s up! %1$s</string>
    <string name="tia_mahmoud_morsy">Tia Mahmoud MoRsy ❤️</string>
    <string name="no_alarms_set">No alarms set 😲</string>
    <string name="alarm_removed">Alarm Removed</string>
    <string name="without_name">Without Name</string>
    <string name="language"> العربية</string>
    <string name="alarm_set_for_repeating_every_hour">Alarm set for %1$s:%2$s repeating every %3$s hour</string>
    <string name="please_you_must_enter_name_of_alarm_and_interval_time">Please you must enter name of alarm and interval time 😢</string>
    <string name="without_name_j">Without Name j</string>
</resources>